// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Select SelectWithErrorBoolean smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="select_l8273--label"
         for="select_l8273"
  >
    Label text goes here
  </label>
  <select class="nhsuk-select nhsuk-select--error"
          aria-labelledby="select_l8273--label"
          name="select_l8273"
          id="select_l8273"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
<button class="nhsuk-button"
        aria-disabled="false"
        type="submit"
>
  Toggle Error
</button>
`;

exports[`Components/Select SelectWithErrorString smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="select_c60xf--label"
         for="select_c60xf"
  >
    Label text goes here
  </label>
  <span class="nhsuk-error-message"
        id="select_c60xf--error-message"
        role="alert"
  >
    <span class="nhsuk-u-visually-hidden">
      Error:
    </span>
    Error message goes here
  </span>
  <select class="nhsuk-select nhsuk-select--error"
          aria-labelledby="select_c60xf--label"
          name="select_c60xf"
          id="select_c60xf"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
<div class="nhsuk-form-group">
  <input class="nhsuk-input"
         name="input_6yn25"
         id="input_6yn25"
         type="text"
         value="Error message goes here"
  >
</div>
`;

exports[`Components/Select SelectWithHintText smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="select_1v1mf--label"
         for="select_1v1mf"
  >
    Label text goes here
  </label>
  <div class="nhsuk-hint"
       id="select_1v1mf--hint"
  >
    Hint text goes here
  </div>
  <select class="nhsuk-select"
          aria-describedby="select_1v1mf--hint"
          aria-labelledby="select_1v1mf--label"
          name="select_1v1mf"
          id="select_1v1mf"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
`;

exports[`Components/Select Standard smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="select-1--label"
         for="select-1"
  >
    Label text goes here
  </label>
  <select class="nhsuk-select"
          aria-labelledby="select-1--label"
          name="select-1"
          id="select-1"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3"
            disabled
    >
      NHS.UK frontend option 3
    </option>
  </select>
</div>
`;
